--- a/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj.filters
+++ b/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="LoadingObjDemo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ServiceLocator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -98,6 +101,9 @@
     <ClInclude Include="LoadingObjDemo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ServiceLocator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="00-GlfwWindow.rc">
@@ -118,5 +124,7 @@
     <None Include="Assets\Shaders\Vertex\shaderColor.vert" />
     <None Include="Assets\Shaders\Vertex\buffer.vert" />
     <None Include="Assets\Shaders\Fragment\buffer.frag" />
+    <None Include="Assets\Shaders\Fragment\uniforms.frag" />
+    <None Include="Assets\Shaders\Vertex\uniforms.vert" />
   </ItemGroup>
 </Project>
