--- a/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj
+++ b/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj
@@ -152,11 +152,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Components\Component.cpp" />
+    <ClCompile Include="Logging\ConsoleLogger.cpp" />
     <ClCompile Include="Demos\BufferDemo.cpp" />
     <ClCompile Include="Demos\FragCoordDemo.cpp" />
     <ClCompile Include="Components\DrawableComponent.cpp" />
     <ClCompile Include="GameObjects\GameObject.cpp" />
-    <ClCompile Include="GLRenderer.cpp" />
+    <ClCompile Include="Logging\Logger.cpp" />
+    <ClCompile Include="Rendering\GLRenderer.cpp" />
     <ClCompile Include="GL\gl_core_4_5.c" />
     <ClCompile Include="Demos\LoadingObjDemo.cpp" />
     <ClCompile Include="Components\MeshComponent.cpp" />
@@ -166,7 +168,7 @@
     <ClCompile Include="Demos\ShaderPipelineDemo.cpp" />
     <ClCompile Include="Demos\ShaderColorDemo.cpp" />
     <ClCompile Include="Demos\VertexBufferDemo.cpp" />
-    <ClCompile Include="ServiceLocator.cpp" />
+    <ClCompile Include="Util\ServiceLocator.cpp" />
     <ClCompile Include="Components\TransformComponent.cpp" />
     <ClCompile Include="Window\GlfwWindow.cpp" />
     <ClCompile Include="Window\WindowInterface.cpp" />
@@ -175,11 +177,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components\Component.h" />
+    <ClInclude Include="Logging\ConsoleLogger.h" />
     <ClInclude Include="Demos\BufferDemo.h" />
     <ClInclude Include="Demos\FragCoordDemo.h" />
     <ClInclude Include="Components\DrawableComponent.h" />
     <ClInclude Include="GameObjects\GameObject.h" />
-    <ClInclude Include="GLRenderer.h" />
+    <ClInclude Include="Logging\Logger.h" />
+    <ClInclude Include="Rendering\GLRenderer.h" />
     <ClInclude Include="GL\gl_core_4_5.h" />
     <ClInclude Include="Demos\LoadingObjDemo.h" />
     <ClInclude Include="Components\MeshComponent.h" />
@@ -189,9 +193,10 @@
     <ClInclude Include="Demos\ShaderPipelineDemo.h" />
     <ClInclude Include="Demos\ShaderColorDemo.h" />
     <ClInclude Include="Demos\VertexBufferDemo.h" />
-    <ClInclude Include="ServiceLocator.h" />
+    <ClInclude Include="Util\GLDebug.h" />
+    <ClInclude Include="Util\ServiceLocator.h" />
     <ClInclude Include="Components\TransformComponent.h" />
-    <ClInclude Include="Vertex.h" />
+    <ClInclude Include="Data\Vertex.h" />
     <ClInclude Include="Window\GlfwWindow.h" />
     <ClInclude Include="Window\WindowInterface.h" />
     <ClInclude Include="Input\InputHandler.h" />
