Adding Diffuse Demo

--- a/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj
+++ b/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="Cameras\Camera.cpp" />
     <ClCompile Include="Components\Component.cpp" />
+    <ClCompile Include="Demos\DiffuseDemo.cpp" />
     <ClCompile Include="Logging\ConsoleLogger.cpp" />
     <ClCompile Include="Demos\BufferDemo.cpp" />
     <ClCompile Include="Demos\FragCoordDemo.cpp" />
@@ -179,6 +180,9 @@
   <ItemGroup>
     <ClInclude Include="Cameras\Camera.h" />
     <ClInclude Include="Components\Component.h" />
+    <ClInclude Include="Data\Light.h" />
+    <ClInclude Include="Data\Material.h" />
+    <ClInclude Include="Demos\DiffuseDemo.h" />
     <ClInclude Include="Logging\ConsoleLogger.h" />
     <ClInclude Include="Demos\BufferDemo.h" />
     <ClInclude Include="Demos\FragCoordDemo.h" />
@@ -210,6 +214,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\Fragment\buffer.frag" />
+    <None Include="Assets\Shaders\Fragment\diffuseLight.frag" />
     <None Include="Assets\Shaders\Fragment\fragCoord.frag" />
     <None Include="Assets\Shaders\Fragment\pipeline.frag" />
     <None Include="Assets\Shaders\Fragment\shaderColor.frag" />
@@ -219,6 +224,7 @@
     <None Include="Assets\Shaders\Tessellation\pipeline.tc" />
     <None Include="Assets\Shaders\Tessellation\pipeline.te" />
     <None Include="Assets\Shaders\Vertex\buffer.vert" />
+    <None Include="Assets\Shaders\Vertex\diffuseLight.vert" />
     <None Include="Assets\Shaders\Vertex\fragCoord.vert" />
     <None Include="Assets\Shaders\Vertex\pipeline.vert" />
     <None Include="Assets\Shaders\Vertex\shaderColor.vert" />
